--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body{
 	height:100%;
 	width:100%;
-  background-image: url(5.jpg);
+  background-image: url(/5.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
